5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4330/executions/1764_1183.log
== SUBMITION (2019-05-27 11:14:05) 
-- CODE:
from numpy import* 
vet = array(
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] > 0):
		NPosit =  NPosit + 1
	posi = posi + 1
nvet = zeros(NPosit, dtype=int)
i = 0
i2 = 0
while(i < size(vet)):
	if(vet[i] > 0):
		nvet[i2] = vet[i]
		i2 = i2 + 1
	i = i+ 1
print(nvet)
-- EXECUTION TIME:
0.139815
-- ERROR:
  File "/home/codebench/codes/1764/1183/main.py", line 4
    tamanho = size(vet)
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 11:14:07) 
-- CODE:
from numpy import* 
vet = array(
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] > 0):
		NPosit =  NPosit + 1
	posi = posi + 1
nvet = zeros(NPosit, dtype=int)
i = 0
i2 = 0
while(i < size(vet)):
	if(vet[i] > 0):
		nvet[i2] = vet[i]
		i2 = i2 + 1
	i = i+ 1
print(nvet)
-- EXECUTION TIME:
0.157737
-- ERROR:
  File "/home/codebench/codes/1764/1183/main.py", line 4
    tamanho = size(vet)
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 11:14:08) 
-- CODE:
from numpy import* 
vet = array(
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] > 0):
		NPosit =  NPosit + 1
	posi = posi + 1
nvet = zeros(NPosit, dtype=int)
i = 0
i2 = 0
while(i < size(vet)):
	if(vet[i] > 0):
		nvet[i2] = vet[i]
		i2 = i2 + 1
	i = i+ 1
print(nvet)
-- EXECUTION TIME:
0.190035
-- ERROR:
  File "/home/codebench/codes/1764/1183/main.py", line 4
    tamanho = size(vet)
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 11:14:08) 
-- CODE:
from numpy import* 
vet = array(
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] > 0):
		NPosit =  NPosit + 1
	posi = posi + 1
nvet = zeros(NPosit, dtype=int)
i = 0
i2 = 0
while(i < size(vet)):
	if(vet[i] > 0):
		nvet[i2] = vet[i]
		i2 = i2 + 1
	i = i+ 1
print(nvet)
-- EXECUTION TIME:
0.0993791
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1764/1183/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 11:14:09) 
-- CODE:
from numpy import* 
vet = array(
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] > 0):
		NPosit =  NPosit + 1
	posi = posi + 1
nvet = zeros(NPosit, dtype=int)
i = 0
i2 = 0
while(i < size(vet)):
	if(vet[i] > 0):
		nvet[i2] = vet[i]
		i2 = i2 + 1
	i = i+ 1
print(nvet)
-- EXECUTION TIME:
0.095799
-- ERROR:
  File "/home/codebench/codes/1764/1183/main.py", line 4
    tamanho = size(vet)
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 11:14:09) 
-- CODE:
from numpy import* 
vet = array(
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] > 0):
		NPosit =  NPosit + 1
	posi = posi + 1
nvet = zeros(NPosit, dtype=int)
i = 0
i2 = 0
while(i < size(vet)):
	if(vet[i] > 0):
		nvet[i2] = vet[i]
		i2 = i2 + 1
	i = i+ 1
print(nvet)
-- EXECUTION TIME:
0.177599
-- ERROR:
  File "/home/codebench/codes/1764/1183/main.py", line 4
    tamanho = size(vet)
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 11:14:09) 
-- CODE:
from numpy import* 
vet = array(
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] > 0):
		NPosit =  NPosit + 1
	posi = posi + 1
nvet = zeros(NPosit, dtype=int)
i = 0
i2 = 0
while(i < size(vet)):
	if(vet[i] > 0):
		nvet[i2] = vet[i]
		i2 = i2 + 1
	i = i+ 1
print(nvet)
-- EXECUTION TIME:
0.122596
-- ERROR:
  File "/home/codebench/codes/1764/1183/main.py", line 4
    tamanho = size(vet)
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 17:52:28) 
-- CODE:
from numpy import*
a=array(eval(input("Elemnto: ")))

y=array([x for x in a if x>0])

print(y)
-- EXECUTION TIME:
0.391998
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
Elemnto: [2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
Elemnto: [18 32 14 25]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 17:52:30) 
-- CODE:
from numpy import*
a=array(eval(input("Elemnto: ")))

y=array([x for x in a if x>0])

print(y)
-- EXECUTION TIME:
0.433083
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[1]
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 17:52:32) 
-- CODE:
from numpy import*
a=array(eval(input("Elemnto: ")))

y=array([x for x in a if x>0])

print(y)
-- EXECUTION TIME:
0.516611
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
